# Licenta

Solution/: CMakeLists.txt
Solution/Engine/AutoCorrector/: ApiKey.txt  AutoCorrector.sln  Results.xlsx  temp.h
Solution/Engine/AutoCorrector/AutoCorrector/: AutoCorrector.csproj  AutoCorrectorEngine.csproj  Cluster.cs  CorrectionChecker.cs  ExcelManager.cs  FileProcessor.cs  LLMManager.cs  NotificationService.cs  ObservableDictionary.cs  ObservalbeCollectionExtension.cs  PlagiarismChecker.cs  PlagiarismPair.cs  ProcessExecutor.cs  Program.cs  Requirement.cs  ScaleProcessor.cs  Settings.cs  SourceFile.cs  Student.cs  StudentInfo.cs  StudentManager.cs  SubRequirement.cs  Translate.cs
Solution/Engine/AutoCorrector/AutoCorrector/Properties/: launchSettings.json
Solution/Engine/AutoCorrector/AutoCorrectorFrontend/: App.xaml  App.xaml.cs  AutoCorrectorFrontend.csproj  MainWindow.xaml  MainWindow.xaml.cs
Solution/Engine/AutoCorrector/AutoCorrectorFrontend/Events/: NavigationRequestEvent.cs
Solution/Engine/AutoCorrector/AutoCorrectorFrontend/Properties/: launchSettings.json
Solution/Engine/AutoCorrector/AutoCorrectorFrontend/Themes/: ButtonTheme.xaml  MenuButtonTheme.xaml  ScrollbarTheme.xaml
Solution/Engine/AutoCorrector/AutoCorrectorLib/: ASTTraverser.cpp  ASTTraverser.h  AutoCorrectorLib.vcxproj  AutoCorrectorLib.vcxproj.filters  CompilationChecker.cpp  CompilationChecker.h  FunctionExtractor.cpp  FunctionExtractor.h  FunctionSignatureExtractor.cpp  FunctionSignatureExtractor.h
Solution/Engine/AutoCorrector/AutoCorrectorLibWrapper/: AutoCorrectorLibWrapper.vcxproj  AutoCorrectorLibWrapper.vcxproj.filters  CompilationCheckerWrapper.cpp  CompilationCheckerWrapper.h  FunctionExtractorWrapper.cpp  FunctionExtractorWrapper.h  FunctionSignatureExtractorWrapper.cpp  FunctionSignatureExtractorWrapper.h
Solution/Engine/AutoCorrector/ModelFiles/: autoCorrector  converter  engine  engine2  extractor  extractor2  modDec  scaleCreator  sourceFileCorrector  unitTester
Solution/Engine/AutoCorrector/Project1/: Project1.vcxproj
Solution/Engine/AutoCorrector/Scripts/: MatchFinder.py  Translate.py  UnitTester.py
Solution/Engine/AutoCorrector/Syntax/: cpp.xshd
Solution/Engine/AutoCorrector/UnitTests/: Ababei Vasile 3.1.cpp  Alexe Robert George 3.1.cpp  Alin Claudiu 3.1.cpp  Patrasc George 3.1.cpp
Solution/Engine/AutoCorrector/Unzipped/Ababei Vasile_116995_assignsubmission_file/: main.cpp
Solution/Engine/AutoCorrector/Unzipped/Adrian Popescu_117018_assignsubmission_file/: source.cpp
Solution/Engine/AutoCorrector/Unzipped/Alexe Robert George_116960_assignsubmission_file/: source.cpp
Solution/Engine/AutoCorrector/Unzipped/Alin Claudiu_117017_assignsubmission_file/: source.cpp
Solution/Engine/AutoCorrector/Unzipped/Andreea Nita _117018_assignsubmission_file/: source.cpp
Solution/Engine/AutoCorrector/Unzipped/Dragos Matei_117018_assignsubmission_file/: source.cpp
Solution/Engine/AutoCorrector/Unzipped/Ovidiu Munteanu_117018_assignsubmission_file/: source.cpp
Solution/Engine/AutoCorrector/Wrapper/: ASTTraverserWrapper.cpp  ASTTraverserWrapper.h  CompilationCheckerWrapper.cpp  CompilationCheckerWrapper.h  Wrapper.vcxproj
Solution/Engine/AutoCorrector/res/: Ababei Vasile_116995_assignsubmission_file-Alexe Robert George_116960_assignsubmission_file.json  Alin Claudiu_117017_assignsubmission_file-Ababei Vasile_116995_assignsubmission_file.json  Alin Claudiu_117017_assignsubmission_file-Alexe Robert George_116960_assignsubmission_file.json  Patrasc George_117018_assignsubmission_file-Ababei Vasile_116995_assignsubmission_file.json  Patrasc George_117018_assignsubmission_file-Alexe Robert George_116960_assignsubmission_file.json  Patrasc George_117018_assignsubmission_file-Alin Claudiu_117017_assignsubmission_file.json  options.json  overview.json  submissionFileIndex.json
Solution/src/: clr_project.cpp  main.cpp
(+37 files in other folders)
